# CW_6

./: README.md  pyproject.toml
skymarket/ads/: models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_alter_ad_options_alter_comment_options_ad_author_and_more.py  0003_alter_ad_author_alter_ad_created_at_alter_ad_price_and_more.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  email.py  managers.py  models.py  serializers.py  urls.py
skymarket/users/migrations/: 0001_initial.py
